--- a/build.gradle
+++ b/build.gradle
@@ -10,9 +10,14 @@ repositories {
     mavenLocal()
 }
 dependencies {
+    def log4jVersion = "2.11.1"
+
     testImplementation "org.testng:testng:7.0.0"
-    testImplementation "org.seleniumhq.selenium:selenium-java:+"
-    testImplementation "io.appium:java-client:+"
+    testImplementation "org.seleniumhq.selenium:selenium-java:3.141.59"
+    testImplementation "io.appium:java-client:7.2.0"
+    testImplementation "org.apache.logging.log4j:log4j-slf4j-impl:${log4jVersion}"
+    testImplementation "org.apache.logging.log4j:log4j-core:${log4jVersion}"
+    testImplementation "org.apache.logging.log4j:log4j-jul:${log4jVersion}"
 }
 
 compileTestJava {
